--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.21",
     "@heroui/button": "2.2.24",
+    "@heroui/card": "^2.2.23",
+    "@heroui/checkbox": "^2.3.24",
+    "@heroui/chip": "^2.2.20",
     "@heroui/code": "2.2.18",
     "@heroui/input": "2.4.25",
     "@heroui/kbd": "2.2.19",
@@ -17,36 +21,46 @@
     "@heroui/listbox": "2.3.23",
     "@heroui/modal": "^2.2.21",
     "@heroui/navbar": "2.2.22",
+    "@heroui/select": "^2.4.25",
     "@heroui/snippet": "2.2.25",
     "@heroui/spinner": "^2.2.21",
     "@heroui/switch": "2.2.22",
     "@heroui/system": "2.4.20",
     "@heroui/theme": "2.4.20",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/third-parties": "^15.5.2",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.26",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
     "clsx": "2.1.1",
-    "framer-motion": "11.18.2",
+    "framer-motion": "^12.23.12",
     "googleapis": "^154.1.0",
+    "gray-matter": "^4.0.3",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.536.0",
-    "next": "15.3.1",
+    "next": "^15.5.2",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "0.4.6",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.6",
     "path": "^0.12.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "^4.0.14"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "4.1.11",
+    "@types/grecaptcha": "^3.0.9",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
-    "eslint": "9.25.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
@@ -57,10 +71,10 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
-    "postcss": "8.5.6",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwind-variants": "2.0.1",
-    "tailwindcss": "4.1.11",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.6.3"
   }
 }
