--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
-    "@heroui/accordion": "^2.2.21",
-    "@heroui/button": "2.2.24",
-    "@heroui/card": "^2.2.23",
-    "@heroui/checkbox": "^2.3.24",
-    "@heroui/chip": "^2.2.20",
-    "@heroui/code": "2.2.18",
-    "@heroui/divider": "^2.2.19",
-    "@heroui/input": "2.4.25",
-    "@heroui/kbd": "2.2.19",
-    "@heroui/link": "2.2.21",
-    "@heroui/listbox": "2.3.23",
-    "@heroui/modal": "^2.2.21",
-    "@heroui/navbar": "2.2.22",
+    "@heroui/accordion": "^2.2.24",
+    "@heroui/button": "^2.2.27",
+    "@heroui/card": "^2.2.25",
+    "@heroui/checkbox": "^2.3.27",
+    "@heroui/chip": "^2.2.22",
+    "@heroui/code": "^2.2.21",
+    "@heroui/divider": "^2.2.20",
+    "@heroui/input": "^2.4.28",
+    "@heroui/kbd": "^2.2.22",
+    "@heroui/link": "^2.2.23",
+    "@heroui/listbox": "^2.3.26",
+    "@heroui/modal": "^2.2.24",
+    "@heroui/navbar": "^2.2.25",
     "@heroui/react": "^2.8.5",
-    "@heroui/select": "^2.4.25",
-    "@heroui/snippet": "2.2.25",
-    "@heroui/spinner": "^2.2.21",
-    "@heroui/switch": "2.2.22",
-    "@heroui/system": "2.4.20",
-    "@heroui/theme": "2.4.20",
+    "@heroui/select": "^2.4.28",
+    "@heroui/snippet": "^2.2.28",
+    "@heroui/spinner": "^2.2.24",
+    "@heroui/switch": "^2.2.24",
+    "@heroui/system": "^2.4.23",
+    "@heroui/theme": "^2.4.23",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
@@ -56,6 +56,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.1",
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "4.1.11",
@@ -81,7 +82,7 @@
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwind-variants": "2.0.1",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4.1.16",
     "typescript": "5.6.3"
   }
 }
