--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "@next/third-parties": "^16.0.0",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.26",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.16.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/mdx": "^2.0.13",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
@@ -46,6 +50,7 @@
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.536.0",
     "next": "^16.0.0",
+    "next-sanity": "^11.6.7",
     "next-themes": "0.4.6",
     "nodemailer": "^7.0.6",
     "path": "^0.12.7",
@@ -53,6 +58,8 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sanity": "^4.16.0",
+    "styled-components": "^6.1.19",
     "zod": "^3.22.4"
   },
   "devDependencies": {
