--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "gray-matter": "^4.0.3",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.536.0",
-    "next": "^16.0.0",
+    "next": "^16.0.7",
     "next-sanity": "^11.6.7",
     "next-themes": "0.4.6",
     "nodemailer": "^7.0.6",
     "path": "^0.12.7",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sanity": "^4.16.0",
@@ -75,6 +75,7 @@
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.35.0",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "9.1.0",
@@ -91,5 +92,8 @@
     "tailwind-variants": "2.0.1",
     "tailwindcss": "^4.1.16",
     "typescript": "5.6.3"
+  },
+  "overrides": {
+    "jsdom": "27.3.0"
   }
 }
