--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p3000 -H 127.0.0.1",
     "lint": "eslint --fix"
   },
   "dependencies": {
